# Graphon

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  local-ci.sh
.bmad-core/: bmad-project.md
.bmad-core/workflows/: main.md
.github/workflows/: ci.yml
_bmad/: config.toml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
crates/graphon-application/: Cargo.toml
crates/graphon-application/src/: lib.rs
crates/graphon-application/src/use_cases/: label_organizer.rs  rag_indexer.rs  sort_pipeline.rs
crates/graphon-core/: Cargo.toml
crates/graphon-core/src/: entities.rs  error.rs  lib.rs  ports.rs
crates/graphon-infrastructure/: Cargo.toml
crates/graphon-infrastructure/src/: lib.rs
crates/graphon-infrastructure/src/adapters/: classifier.rs  database.rs  gmail_client.rs  qdrant.rs
crates/graphon-server/: Cargo.toml
crates/graphon-server/src/: dashboard.html  main.rs
