[package]
name = "graphon-infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
graphon-core = { path = "../graphon-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
async-trait.workspace = true
sqlx.workspace = true
chrono.workspace = true
tracing.workspace = true
anyhow.workspace = true
