[package]
name = "graphon-server"
version = "0.1.0"
edition = "2021"

[dependencies]
graphon-core = { path = "../graphon-core" }
graphon-application = { path = "../graphon-application" }
graphon-infrastructure = { path = "../graphon-infrastructure" }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
